[package]
name = "gitstrap"
authors = ["Shalev Ari"]
version = "0.1.0"
edition = "2021"
description = "Initialize a new GitHub repository, blazingly fast!"
repository = "https://github.com/ShalevAri/gitstrap"
license = "AGPL-3.0-only"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
dialoguer = "0.10"